--- a/style.css
+++ b/style.css
@@ -11,20 +11,21 @@ body{
 
 .menu{
     background:#123;
-    width:50px; 
+    width:40px; 
     height:100vh;
     padding:20px;
     overflow: hidden;
     transition:.5s;
 }
 .menu:hover{
-    width:350px;
+   min-width: 140px;
 }
 ul{
     list-style-type: none;
     position: relative;
     height:95%;
 }
+
 
 ul li a{
     display:block;
@@ -33,7 +34,7 @@ ul li a{
      margin:10px 0;
      display:flex;
      align-items: center;
-     gap:40px;
+     gap:30px;
      transition: .5;
 }
 
@@ -53,11 +54,11 @@ ul li a:hover, .active{
 }
 
 ul li a i{
-    font-size:20px;
+    font-size:17px;
 }
 
 .img-box{
-    width:50px;
+    width:40px;
     height:50px;
     border-radius: 50%;
     overflow: hidden;
@@ -102,8 +103,8 @@ ul li a i{
 }
 
 .box{
-background:#123;
-flex-basis: 140px;
+background:#123; 
+flex-basis: 130px;
 height:150px;
 flex-grow:1;
 border-radius: 10px;
@@ -126,18 +127,16 @@ justify-content: space-around;
 
 table{
     width:100%;
-    border-spacing: 10px; 
+    border-spacing: 5px;
 }
 thead tr th{
-    background:rgba(0, 0, 255, 0.616);
-    padding:5px;
-    border-radius: 8px;
+   background:#ffffff28;
+   border-radius: 10px;
+   padding:5px 0;
 }
-
 tbody tr td{
     background:#ffffff11;
     padding:5px;
     border-radius: 10px;
     text-align: center;
 }
-
